Now Program breaks and didn't functions.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,19 +15,19 @@
         </div>
     </div>
     <div class="container d-flex h-100">
-        <a href="http://localhost:8080/test?category" target="_blank">Przejdź do pełnej oferty sklepu</a> <br/>
+        <a href="http://localhost:8080/products?category" target="_blank">Przejdź do pełnej oferty sklepu</a> <br/>
         <br/>
     </div>
     <div class="container d-flex h-100">
-        <a href="http://localhost:8080/test?category=spo%C5%BCywcze" target="_blank">Przejdź do działu z produktami spożywczymi</a> <br/>
+        <a href="http://localhost:8080/products?category=spo%C5%BCywcze" target="_blank">Przejdź do działu z produktami spożywczymi</a> <br/>
         <br/>
     </div>
     <div class="container d-flex h-100">
-        <a href="http://localhost:8080/test?category=gospodarstwo%20domowe" target="_blank">Przejdź do działu z produktami gospodarstwa domowego</a> <br/>
+        <a href="http://localhost:8080/products?category=gospodarstwo%20domowe" target="_blank">Przejdź do działu z produktami gospodarstwa domowego</a> <br/>
         <br/>
     </div>
     <div class="container d-flex h-100">
-        <a href="http://localhost:8080/test?category=inne" target="_blank">Przejdź do działu z innymi produktami</a> <br/>
+        <a href="http://localhost:8080/products?category=inne" target="_blank">Przejdź do działu z innymi produktami</a> <br/>
     </div>
 </form>
 </body>
